force-app/main/default/objects/AR_Obj200__c/AR_Obj200__c.object-meta.xml
<CustomObject>
    <label>AR-Obj200</label>
    <nameField>
        <label>AR-Obj200 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR-Obj200s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>