force-app/main/default/objects/AR_Obj200__c/fields/EmailField__c.field-meta.xml
<CustomField>
    <fullName>EmailField__c</fullName>
    <label>EmailField</label>
    <type>Email</type>
</CustomField>