force-app/main/default/objects/AR_Obj200__c/fields/Field4__c.field-meta.xml
<CustomField>
    <fullName>Field4__c</fullName>
    <label>Field4</label>
    <length>7</length>
    <type>Text</type>
</CustomField>