force-app/main/default/objects/AR_Obj200__c/fields/PicklistField1__c.field-meta.xml
<CustomField>
    <fullName>PicklistField1__c</fullName>
    <label>PicklistField1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>